#1368: neon-sso-session-proxy is stuck STARTING

--- a/Lib/Neon.Service/Neon.Service.csproj
+++ b/Lib/Neon.Service/Neon.Service.csproj
@@ -64,6 +64,10 @@
     <None Include="..\..\LICENSE" Pack="True" PackagePath="" />
   </ItemGroup>
 
+	<ItemGroup>
+	  <EmbeddedResource Include="Resources/**/*" />
+	</ItemGroup>
+	
   <ItemGroup>
     <Folder Include="Resources\" />
   </ItemGroup>
