--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -73,12 +73,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DNS" Version="6.1.0" />
-    <PackageReference Include="GitInfo" Version="2.1.2">
+    <PackageReference Include="DNS" Version="7.0.0" />
+    <PackageReference Include="GitInfo" Version="2.2.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="KubernetesClient" Version="6.0.26" />
+    <PackageReference Include="KubernetesClient" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.11" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Net.Http.Server" Version="1.1.4" />
@@ -117,7 +117,7 @@
   Generates the [KubernetesWithRetry.cs] file.
   -->
 
-  <Target Name="K8sWithRetry" BeforeTargets="BeforeCompile" Condition="Exists('$(NF_ROOT)\Tools\prebuilder\bin\$(Configuration)\net6.0\prebuilder.exe')">
+  <Target Name="K8sWithRetry" BeforeTargets="BeforeBuild" Condition="Exists('$(NF_ROOT)\Tools\prebuilder\bin\$(Configuration)\net6.0\prebuilder.exe')">
     <Exec Command="$(NF_ROOT)\Tools\prebuilder\bin\$(Configuration)\net6.0\prebuilder generate-kubernetes-with-retry &quot;$(ProjectDir)Kubernetes\KubernetesWithRetry.cs&quot; Neon.Kube" />
   </Target>
 
