ready-to-go WIP

--- a/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/kiali-cr.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/kiali-cr.yaml
@@ -35,6 +35,8 @@ spec:
     accessible_namespaces:
     - '**'
     service_type: "ClusterIP"
+    pod_annotations:
+      reloader.stakater.com/auto: true
   external_services:
     grafana:
       auth:
