--- a/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/secret.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/secret.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: neon-system
   labels:
     app: kiali
+  annotations:
+    reloader.stakater.com/match: "true"
 type: Opaque
 stringData:
   oidc-secret: {{ .Values.oidc.secret }}
