--- a/Services/neon-dashboard/neon-dashboard.csproj
+++ b/Services/neon-dashboard/neon-dashboard.csproj
@@ -17,6 +17,8 @@
 	<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc8" />
 	<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc8" />
 	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc8" />
+	<PackageReference Include="prometheus-net" Version="5.0.2" />
+	<PackageReference Include="prometheus-net.AspNetCore" Version="5.0.2" />
 	<PackageReference Include="prometheus-net.DotNetRuntime" Version="4.2.2" />
   </ItemGroup>
 
