--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-session-proxy/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-session-proxy/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
                   key: CIPHER_KEY
           ports:
             - name: http
-              containerPort: 5000
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
             - name: http-metrics
               containerPort: {{ .Values.metrics.port }}
