--- a/Lib/Neon.Kube.Resources/Neon.Kube.Resources.csproj
+++ b/Lib/Neon.Kube.Resources/Neon.Kube.Resources.csproj
@@ -22,7 +22,7 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>kubernetes</PackageTags>
-    <RootNamespace>Neon.Kube.Entities</RootNamespace>
+    <RootNamespace>Neon.Kube.Resources</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
