--- a/Services/test-cadence/test-cadence.csproj
+++ b/Services/test-cadence/test-cadence.csproj
@@ -23,7 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Lib\Neon.Cadence\Neon.Cadence.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Common\Neon.Common.csproj" />
-    <ProjectReference Include="..\..\Lib\Neon.Kube.Service\Neon.Kube.Service.csproj" />
+    <ProjectReference Include="..\..\Lib\Neon.Kube.Operator\Neon.Kube.Operator.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Service\Neon.Service.csproj" />
     <ProjectReference Include="..\..\Test\Test.Neon.Models.Cadence\Test.Neon.Models.Cadence.csproj" />
   </ItemGroup>
