--- a/Services/neon-sso-session-proxy/neon-sso-session-proxy.csproj
+++ b/Services/neon-sso-session-proxy/neon-sso-session-proxy.csproj
@@ -21,7 +21,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Lib\Neon.Common\Neon.Common.csproj" />
-		<ProjectReference Include="..\..\Lib\Neon.Kube.Service\Neon.Kube.Service.csproj" />
+		<ProjectReference Include="..\..\Lib\Neon.Kube.Operator\Neon.Kube.Operator.csproj" />
 		<ProjectReference Include="..\..\Lib\Neon.Service\Neon.Service.csproj" />
 		<ProjectReference Include="..\..\Lib\Neon.Web\Neon.Web.csproj" />
 	</ItemGroup>
