#1302: Workaround for KubeOps generator command handling is working

--- a/Services/neon-cluster-operator/neon-cluster-operator.csproj
+++ b/Services/neon-cluster-operator/neon-cluster-operator.csproj
@@ -14,17 +14,9 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
     
-    <!-- Write generated installation YAML to an ephemeral folder -->
+    <!-- Write generated installation YAML to an git-ignored folder -->
 
     <KubeOpsConfigRoot>config.gitignore</KubeOpsConfigRoot>
-	  
-	<!-- $debug(jefflill): Remove this after we figure out how to run without a kubeconfig -->  
-	  
-    <KubeOpsSkipDockerfile>true</KubeOpsSkipDockerfile>
-	<KubeOpsSkipCrds>true</KubeOpsSkipCrds>
-	<KubeOpsSkipRbac>true</KubeOpsSkipRbac>
-	<KubeOpsSkipOperator>true</KubeOpsSkipOperator>
-	<KubeOpsSkipInstaller>true</KubeOpsSkipInstaller>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
