--- a/Images/Images.csproj
+++ b/Images/Images.csproj
@@ -21,6 +21,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="neon-cluster-operator\appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="neon-cluster-operator\appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="_common\" />
   </ItemGroup>
 
