--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <None Remove="Resources\Helm\neon-cluster-operator\.helmignore" />
     <None Remove="Resources\Helm\neon-cluster-operator\Chart.yaml" />
+    <None Remove="Resources\Helm\neon-cluster-operator\templates\serviceaccount.yaml" />
     <None Remove="Resources\Helm\neon-cluster-operator\values.yaml" />
   </ItemGroup>
 
@@ -81,7 +82,6 @@
 
   <ItemGroup>
     <Folder Include="Resources\Helm\neon-cluster-operator\crds\" />
-    <Folder Include="Resources\Helm\neon-cluster-operator\templates\" />
   </ItemGroup>
 
   <!--
