--- a/Services/neon-cluster-operator/neon-cluster-operator.csproj
+++ b/Services/neon-cluster-operator/neon-cluster-operator.csproj
@@ -83,23 +83,17 @@
   This target publishes all generated CRDs to [$/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/crds/*],
   deleting any existing CRD files first to ensure that the CRDs are fully in sync.
   
-  This also copies all generated installation related manifests to [$/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/*]
-  after kustomizing them.
+  NOTE: This does not copy any other deployment related files to [$/Lib/Neon.Kube.Setup].  We'll edit deployment,
+	      RBAC and other files in place there, like we do for all other charts.
   
   NOTE: [GenerateAfterBuild] is the KubeOps build target that generates the CRDs and other Kubernetes manifest 
         and kustomization files.
   -->
 
   <Target Name="PublishCRDs" AfterTargets="GenerateAfterBuild">
-	  
 	  <Message Importance="high" Text="Publish CRDs" />
 	  <Exec Command="neon-build rm &quot;$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\crds\*&quot;" />
-	  <Exec Command="neon-build publish-files &quot;$(ProjectDir)config.gitignore\crds\*&quot; &quot;$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\crds&quot; --exclude-kustomize" />
-	  
-	  <Message Importance="high" Text="Publish Templates" />
-    <Exec Command="neon-build publish-folder &quot;$(ProjectDir)config\templates&quot; &quot;$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\templates&quot;" />
-    <Exec Command="neon-build kustomize &quot;$(ProjectDir)config.gitignore\rbac&quot; &quot;$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\templates\rbac.yaml&quot;" />
-  
+	  <Exec Command="neon-build publish-files &quot;$(ProjectDir)config.gitignore\crds\*&quot; &quot;$(NF_ROOT)\Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\crds&quot; --exclude-kustomize" />  
   </Target>
   
 </Project>
