--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -54,6 +54,11 @@
     <None Remove="Resources\Helm\neon-cluster-operator\templates\deployment.yaml" />
     <None Remove="Resources\Helm\neon-cluster-operator\templates\serviceaccount.yaml" />
     <None Remove="Resources\Helm\neon-cluster-operator\values.yaml" />
+    <None Remove="Resources\Helm\neon-node-agent\.helmignore" />
+    <None Remove="Resources\Helm\neon-node-agent\Chart.yaml" />
+    <None Remove="Resources\Helm\neon-node-agent\templates\deployment.yaml" />
+    <None Remove="Resources\Helm\neon-node-agent\templates\rbac.yaml" />
+    <None Remove="Resources\Helm\neon-node-agent\values.yaml" />
   </ItemGroup>
 
   <ItemGroup>
