neon-node-agent and neon-cluster-operator deployment and other updates and also changed InstallHelmChartAsync() to accept chart names with dashes (they're converted to underscores)

--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/deployment.yaml
@@ -30,6 +30,8 @@ spec:
         kubectl.kubernetes.io/default-container: neon-cluster-operator
     spec:
       serviceAccountName: neon-cluster-operator
+      tolerations:
+      - operator: Exists
       containers:
       - name: neon-cluster-operator
         env:
