--- a/Lib/Neon.Kube.Setup/Resources/Helm/dex/templates/configmap.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/dex/templates/configmap.yaml
@@ -57,7 +57,7 @@ data:
     - id: kubernetes
       redirectURIs:
       - 'https://k8s.{{ .Values.cluster.domain }}/oauth2/callback'
-      - 'https://kiali.{{ .Values.cluster.domain }}/kiali'
+      - 'https://kiali.{{ .Values.cluster.domain }}/oauth2/callback'
       name: 'Kubernetes'
       secret: "{{- .Values.secrets.kubernetes }}"
       trustedPeers:
