--- a/Lib/Neon.Kube.Setup/Resources/Helm/kubernetes-dashboard/templates/servicemonitor.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/kubernetes-dashboard/templates/servicemonitor.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.metricsScraper.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -21,3 +22,4 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/component: kubernetes-dashboard
+{{- end }}
