--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/configmap.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/configmap.yaml
@@ -123,25 +123,6 @@ data:
           name: default
           scrape_configs:
             - job_name: journal
-              pipeline_stages:
-                - metrics:
-                    log_lines_total:
-                      type: Counter
-                      description: "total number of log lines"
-                      prefix: journal
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        action: inc
-                    log_bytes_total:
-                      type: Counter
-                      description: "total bytes of log lines"
-                      prefix: journal
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        count_entry_bytes: true
-                        action: add
               journal:
                 path: /var/log/journal
                 max_age: 12h
@@ -154,6 +135,49 @@ data:
                 - source_labels:
                     - '__journal__hostname'
                   target_label: 'hostname'
+            - job_name: kubernetes-pods
+              kubernetes_sd_configs:
+                - role: pod
+              pipeline_stages:
+                - cri: {}
+                - metrics:
+                    log_lines_total:
+                      type: Counter
+                      description: "total number of log lines"
+                      prefix: kubernetes_pods_name
+                      max_idle_duration: 24h
+                      config:
+                        match_all: true
+                        action: inc
+                    log_bytes_total:
+                      type: Counter
+                      description: "total bytes of log lines"
+                      prefix: kubernetes_pods_name
+                      max_idle_duration: 24h
+                      config:
+                        match_all: true
+                        count_entry_bytes: true
+                        action: add
+              relabel_configs:
+                - source_labels:
+                    - __meta_kubernetes_pod_controller_name
+                  regex: ([0-9a-z-.]+?)(-[0-9a-f]{8,10})?
+                  action: replace
+                  target_label: __tmp_controller_name
+                - source_labels:
+                    - __meta_kubernetes_pod_label_app_kubernetes_io_name
+                    - __meta_kubernetes_pod_label_app
+                    - __tmp_controller_name
+                    - __meta_kubernetes_pod_name
+                  regex: ^;*([^;]+)(;.*)?$
+                  action: replace
+                  target_label: app
+                - source_labels:
+                    - __meta_kubernetes_pod_label_app_kubernetes_io_component
+                    - __meta_kubernetes_pod_label_component
+                  regex: ^;*([^;]+)(;.*)?$
+                  action: replace
+                  target_label: component
                 - action: replace
                   source_labels:
                     - __meta_kubernetes_pod_node_name
@@ -184,340 +208,13 @@ data:
                     - __meta_kubernetes_pod_uid
                     - __meta_kubernetes_pod_container_name
                   target_label: __path__
-            - job_name: kubernetes-pods-name
-              kubernetes_sd_configs:
-                - role: pod
-              pipeline_stages:
-                - cri: {}
-                - metrics:
-                    log_lines_total:
-                      type: Counter
-                      description: "total number of log lines"
-                      prefix: kubernetes_pods_name
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        action: inc
-                    log_bytes_total:
-                      type: Counter
-                      description: "total bytes of log lines"
-                      prefix: kubernetes_pods_name
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        count_entry_bytes: true
-                        action: add
-              relabel_configs:
-                - source_labels:
-                    - __meta_kubernetes_pod_label_name
-                  target_label: __service__
-                - source_labels:
-                    - __meta_kubernetes_pod_node_name
-                  target_label: __host__
-                - action: drop
-                  regex: ""
-                  source_labels:
-                    - __service__
-                - action: labelmap
-                  regex: __meta_kubernetes_pod_label_(.+)
                 - action: replace
-                  replacement: $1
+                  replacement: /var/log/pods/*$1/*.log
+                  regex: true/(.*)
                   separator: /
                   source_labels:
-                    - __meta_kubernetes_namespace
-                    - __service__
-                  target_label: job
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                  target_label: namespace
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_name
-                  target_label: pod
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_container_name
-                  target_label: container
-                - replacement: /var/log/pods/*$1/*.log
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_pod_uid
-                    - __meta_kubernetes_pod_container_name
-                  target_label: __path__
-            - job_name: kubernetes-pods-app
-              kubernetes_sd_configs:
-                - role: pod
-              pipeline_stages:
-                - cri: {}
-                - metrics:
-                    log_lines_total:
-                      type: Counter
-                      description: "total number of log lines"
-                      prefix: kubernetes_pods_app
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        action: inc
-                    log_bytes_total:
-                      type: Counter
-                      description: "total bytes of log lines"
-                      prefix: kubernetes_pods_app
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        count_entry_bytes: true
-                        action: add
-              relabel_configs:
-                - action: drop
-                  regex: .+
-                  source_labels:
-                    - __meta_kubernetes_pod_label_name
-                - source_labels:
-                    - __meta_kubernetes_pod_label_app
-                  target_label: __service__
-                - source_labels:
-                    - __meta_kubernetes_pod_node_name
-                  target_label: __host__
-                - action: drop
-                  regex: ""
-                  source_labels:
-                    - __service__
-                - action: labelmap
-                  regex: __meta_kubernetes_pod_label_(.+)
-                - action: replace
-                  replacement: $1
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                    - __service__
-                  target_label: job
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                  target_label: namespace
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_name
-                  target_label: pod
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_container_name
-                  target_label: container
-                - replacement: /var/log/pods/*$1/*.log
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_pod_uid
-                    - __meta_kubernetes_pod_container_name
-                  target_label: __path__
-            - job_name: kubernetes-pods-direct-controllers
-              kubernetes_sd_configs:
-                - role: pod
-              pipeline_stages:
-                - cri: {}
-                - metrics:
-                    log_lines_total:
-                      type: Counter
-                      description: "total number of log lines"
-                      prefix: kubernetes_pods_direct_controllers
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        action: inc
-                    log_bytes_total:
-                      type: Counter
-                      description: "total bytes of log lines"
-                      prefix: kubernetes_pods_direct_controllers
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        count_entry_bytes: true
-                        action: add
-              relabel_configs:
-                - action: drop
-                  regex: .+
-                  separator: ""
-                  source_labels:
-                    - __meta_kubernetes_pod_label_name
-                    - __meta_kubernetes_pod_label_app
-                - action: drop
-                  regex: '[0-9a-z-.]+-[0-9a-f]{8,10}'
-                  source_labels:
-                    - __meta_kubernetes_pod_controller_name
-                - source_labels:
-                    - __meta_kubernetes_pod_controller_name
-                  target_label: __service__
-                - source_labels:
-                    - __meta_kubernetes_pod_node_name
-                  target_label: __host__
-                - action: drop
-                  regex: ""
-                  source_labels:
-                    - __service__
-                - action: labelmap
-                  regex: __meta_kubernetes_pod_label_(.+)
-                - action: replace
-                  replacement: $1
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                    - __service__
-                  target_label: job
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                  target_label: namespace
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_name
-                  target_label: pod
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_container_name
-                  target_label: container
-                - replacement: /var/log/pods/*$1/*.log
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_pod_uid
-                    - __meta_kubernetes_pod_container_name
-                  target_label: __path__
-            - job_name: kubernetes-pods-indirect-controller
-              kubernetes_sd_configs:
-                - role: pod
-              pipeline_stages:
-                - cri: {}
-                - metrics:
-                    log_lines_total:
-                      type: Counter
-                      description: "total number of log lines"
-                      prefix: kubernetes_pods_indirect_controllers
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        action: inc
-                    log_bytes_total:
-                      type: Counter
-                      description: "total bytes of log lines"
-                      prefix: kubernetes_pods_indirect_controllers
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        count_entry_bytes: true
-                        action: add
-              relabel_configs:
-                - action: drop
-                  regex: .+
-                  separator: ""
-                  source_labels:
-                    - __meta_kubernetes_pod_label_name
-                    - __meta_kubernetes_pod_label_app
-                - action: keep
-                  regex: '[0-9a-z-.]+-[0-9a-f]{8,10}'
-                  source_labels:
-                    - __meta_kubernetes_pod_controller_name
-                - action: replace
-                  regex: ([0-9a-z-.]+)-[0-9a-f]{8,10}
-                  source_labels:
-                    - __meta_kubernetes_pod_controller_name
-                  target_label: __service__
-                - source_labels:
-                    - __meta_kubernetes_pod_node_name
-                  target_label: __host__
-                - action: drop
-                  regex: ""
-                  source_labels:
-                    - __service__
-                - action: labelmap
-                  regex: __meta_kubernetes_pod_label_(.+)
-                - action: replace
-                  replacement: $1
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                    - __service__
-                  target_label: job
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                  target_label: namespace
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_name
-                  target_label: pod
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_container_name
-                  target_label: container
-                - replacement: /var/log/pods/*$1/*.log
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_pod_uid
-                    - __meta_kubernetes_pod_container_name
-                  target_label: __path__
-            - job_name: kubernetes-pods-static
-              kubernetes_sd_configs:
-                - role: pod
-              pipeline_stages:
-                - cri: {}
-                - metrics:
-                    log_lines_total:
-                      type: Counter
-                      description: "total number of log lines"
-                      prefix: kubernetes_pods_pods_static
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        action: inc
-                    log_bytes_total:
-                      type: Counter
-                      description: "total bytes of log lines"
-                      prefix: kubernetes_pods_pods_static
-                      max_idle_duration: 24h
-                      config:
-                        match_all: true
-                        count_entry_bytes: true
-                        action: add
-              relabel_configs:
-                - action: drop
-                  regex: ""
-                  source_labels:
-                    - __meta_kubernetes_pod_annotation_kubernetes_io_config_mirror
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_label_component
-                  target_label: __service__
-                - source_labels:
-                    - __meta_kubernetes_pod_node_name
-                  target_label: __host__
-                - action: drop
-                  regex: ""
-                  source_labels:
-                    - __service__
-                - action: labelmap
-                  regex: __meta_kubernetes_pod_label_(.+)
-                - action: replace
-                  replacement: $1
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                    - __service__
-                  target_label: job
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                  target_label: namespace
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_name
-                  target_label: pod
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_container_name
-                  target_label: container
-                - replacement: /var/log/pods/*$1/*.log
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_pod_annotation_kubernetes_io_config_mirror
+                    - __meta_kubernetes_pod_annotationpresent_kubernetes_io_config_hash
+                    - __meta_kubernetes_pod_annotation_kubernetes_io_config_hash
                     - __meta_kubernetes_pod_container_name
                   target_label: __path__
       positions_directory: /tmp/positions
