--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/values.yaml
@@ -149,8 +149,10 @@ resources:
   requests:
     memory: 256Mi
 
-metrics:
+serviceMonitor:
+  enabled: true
   interval: 60s
+  # scrapeTimeout: 10s
 
 ## Node labels for pod assignment
 ## ref: https://kubernetes.io/docs/user-guide/node-selection/
