--- a/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/kiali-cr.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/kiali-cr.yaml
@@ -36,7 +36,7 @@ spec:
     - '**'
     service_type: "ClusterIP"
     pod_annotations:
-      reloader.stakater.com/auto: true
+      reloader.stakater.com/auto: "true"
   external_services:
     grafana:
       auth:
