--- a/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/servicemonitor.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/servicemonitor.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.metrics.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -19,3 +20,4 @@ spec:
   selector:
     matchLabels:
       v1.min.io/tenant: minio
+{{- end }}
