--- a/Lib/Neon.Kube.Setup/Resources/Helm/oauth2-proxy/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/oauth2-proxy/templates/deployment.yaml
@@ -65,9 +65,17 @@ spec:
         {{- if .Values.htpasswdFile.enabled }}
           - --htpasswd-file=/etc/oauth2_proxy/htpasswd/users.txt
         {{- end }}
-          - --login-url=https://sso.{{ .Values.cluster.domain }}
-          - --oidc-issuer-url=https://sso.{{ .Values.cluster.domain }}
         env:
+        - name: OAUTH2_PROXY_LOGIN_URL
+          valueFrom:
+            configMapKeyRef:
+              name: {{ template "oauth2-proxy.fullname" . }}
+              key: loginUrl
+        - name: OAUTH2_PROXY_OIDC_ISSUER_URL
+          valueFrom:
+            configMapKeyRef:
+              name: {{ template "oauth2-proxy.fullname" . }}
+              key: issuerUrl
         {{- if .Values.proxyVarsAsSecrets }}
         - name: OAUTH2_PROXY_CLIENT_ID
           value: kubernetes
