--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -51,12 +51,12 @@
   <ItemGroup>
     <None Remove="Resources\Helm\neon-cluster-operator\.helmignore" />
     <None Remove="Resources\Helm\neon-cluster-operator\Chart.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-operator\templates\daemonset.yaml" />
+    <None Remove="Resources\Helm\neon-cluster-operator\templates\deployment.yaml" />
     <None Remove="Resources\Helm\neon-cluster-operator\templates\serviceaccount.yaml" />
     <None Remove="Resources\Helm\neon-cluster-operator\values.yaml" />
     <None Remove="Resources\Helm\neon-node-agent\.helmignore" />
     <None Remove="Resources\Helm\neon-node-agent\Chart.yaml" />
-    <None Remove="Resources\Helm\neon-node-agent\templates\deployment.yaml" />
+    <None Remove="Resources\Helm\neon-node-agent\templates\daemonset.yaml" />
     <None Remove="Resources\Helm\neon-node-agent\templates\rbac.yaml" />
     <None Remove="Resources\Helm\neon-node-agent\values.yaml" />
   </ItemGroup>
