[neon-node-agent]: partial cut of ContainerRegistries is working

--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -29,6 +29,7 @@ spec:
         kubectl.kubernetes.io/default-container: neon-node-agent
     spec:
       serviceAccountName: neon-node-agent
+      hostPID: true
       tolerations:
       - operator: Exists
       volumes:
